--- a/templates/board_detail.html
+++ b/templates/board_detail.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="shortcut icon" href="/static/images/favicon.ico">
-    <title>Document</title>
+    <title>{{ board.title + ' - 오메추!'}}</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <script src="/static/js/navbar.js" defer></script>
@@ -77,15 +77,185 @@
             {% endif %}
             <!-- 오류표시 End -->
             <div class="mb-3">
-                <textarea name="content" id="content" class="form-control" rows="10"></textarea>
+                <textarea name="content" id="content" class="form-control" rows="5"></textarea>
                 <input type="hidden" id="login_name" name="login_name" value="{{ login_name }}">
                 <input type="hidden" id="login_email" name="login_email" value="{{ login_email }}">
                 <input type="hidden" id="board_index" name="board_index" value="{{ board.index }}">
             </div>
             <input type="submit" value="댓글 등록" class="btn btn-primary">
-            <a href="{{ url_for('board._list') }}" class="btn btn-secondary" style="float: right">돌아가기</a>
+            <!-- <a href="{{ url_for('board._list') }}" class="btn btn-secondary" style="float: right">돌아가기</a> -->
         </form>
     </div>
+
+    <!-- board_list -->
+    <!-- board_list -->
+    <!-- board_list -->
+    <br>
+    <hr class="dashed">
+    <br>
+    <div class="container my-3">
+
+        <!-- 변수 선언-->
+        {% set ppg = 5 %} <!-- pages per group -->
+        {% set group = (board_list.page-1) // ppg + 1 %}
+        {% set last_page = (board_list.total+9) // 10 %}
+        {% set last_page_group = (last_page-1) // ppg + 1 %}
+    
+        <div class="row my-3">
+            <div class="row-3">
+                 <!-- 게시글 작성 버튼 -->   
+                <div class="div1">
+                    <a href="{{ url_for('board.create') }}" class="btn btn-primary">게시글 작성</a>
+                </div>
+                <!-- 드롭다운 메뉴 START -->   
+                <div class="dropdown div2">
+                    <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                    {{tab or '전체'}}
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+                        {% if not tab %}
+                        <li><a class="dropdown-item active" id = "tab0" href="#">전체</a></li>
+                        {% else %}
+                        <li><a class="dropdown-item " id = "tab0" href="#">전체</a></li>
+                        {% endif %}
+    
+                        {% if tab == '일반' %}
+                        <li><a class="dropdown-item active" id = "tab1" href="#">일반</a></li>
+                        {% else %}
+                        <li><a class="dropdown-item " id = "tab1" href="#">일반</a></li>
+                        {% endif %}
+    
+                        {% if tab == '오늘 메뉴' %}
+                        <li><a class="dropdown-item active" id = "tab2" href="#">오늘 메뉴</a></li>
+                        {% else %}
+                        <li><a class="dropdown-item " id = "tab2" href="#">오늘 메뉴</a></li>
+                        {% endif %}
+    
+                        {% if tab == '맛집 추천' %}
+                        <li><a class="dropdown-item active" id = "tab3" href="#">맛집 추천</a></li>
+                        {% else %}
+                        <li><a class="dropdown-item " id = "tab3" href="#">맛집 추천</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+                <!-- 드롭다운 메뉴 END -->   
+            </div>
+        </div>
+    
+        <!-- 리스트 -->    
+        <table class="table">
+            <thead>
+            <tr class="table-dark">
+                <th>번호</th>
+                <th>탭</th>
+                <th>제목</th>
+                <th>작성일시</th>
+                <th>작성자</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% if board_list %}
+                {% if board_list.items %}
+                    {% for board in board_list.items %}
+                        <tr>
+                            <td>{{ board.index }}</td>            
+                            <td>{% if board.tab %}
+                                    {% if board.tab == '일반' %}
+                                    <div style="color:darkgray"> {{'일반'}}</div>
+                                    {% else %}
+                                    <div class="text"> {{board.tab}}</div>
+                                    {% endif %}
+                                {% endif %}</td> 
+                            <td>
+                                <a href="{{ url_for('board.detail', board_index=board.index, page=page, kw=kw, tab=tab) }}">{{ board.title }}</a>    
+                                {% if board.comment_set|length > 0 %}
+                                <span class="text-secondary small mx-2">[{{ board.comment_set|length }}]</span>
+                                {% endif %}
+                            </td>
+                            <td>{{ board.datetime|datetime }}</td>
+                            <td>{{ board.user }}</td>
+                        </tr>
+                    {% endfor %}
+                {% else %}
+                <tr>
+                    <td colspan="3">검색 결과가 없어요!</td>
+                </tr>
+                {% endif %}
+            {% else %}
+                <tr>
+                    <td colspan="3">게시글이 하나도 없어요!</td>
+                </tr>
+            {% endif %}
+            </tbody>
+        </table>    
+    
+        <!-- 검색 버튼 그룹 -->
+        <div class="row-6">
+            <div class="input-group" >
+                <input type="text" id="search_kw" class="form-control" value="{{ kw or '' }}" style="margin-right:10px">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" id="btn_search">검색</button>
+                    <button class="btn btn-outline-danger" type="button" id="btn_search_reset">리셋</button>
+                </div>
+            </div>
+        </div>
+    
+        <!-- 페이징처리 START -->
+        <ul class="pagination justify-content-center">
+            <!-- 맨앞 -->
+            {% if board_list.page > ppg %}
+            <li class="page-item">
+                <a class="page-link" data-page="{{ 1 }}" href="javascript:void(0)">&lt;&lt;</a>
+            </li>
+            {% endif %}
+            <!-- 이전 -->
+            {% if board_list.page > ppg %}
+            <li class="page-item">
+                <a class="page-link" data-page="{{ board_list.page - ppg }}" href="javascript:void(0)">&lt;</a>
+            </li>
+            {% endif %}
+            <!-- 페이지 번호 -->
+            {% for page_num in range((group-1)*ppg + 1, group*ppg + 1) %}
+                {% if page_num <= last_page %}
+                    {% if page_num != board_list.page %}
+                    <li class="page-item">
+                        <a class="page-link" data-page="{{ page_num }}" href="javascript:void(0)">{{ page_num }}</a>
+                    </li>
+                    {% else %}
+                    <li class="page-item active" aria-current="page">
+                        <a class="page-link" href="javascript:void(0)">{{ page_num }}</a>
+                    </li>
+                    {% endif %}
+                {% endif %}
+            {% endfor %}
+            <!-- 다음 -->
+            {% if group < last_page_group %}
+            <li class="page-item">
+                <a class="page-link" data-page="{{ (board_list.page + ppg, last_page)|min }}" href="javascript:void(0)">&gt;</a>
+            </li>
+            {% endif %}
+            <!-- 맨뒤 -->
+            {% if group < last_page_group %}
+            <li class="page-item">
+                <a class="page-link" data-page="{{ last_page }}" href="javascript:void(0)">&gt;&gt;</a>
+            </li>
+            {% endif %}
+        </ul>
+        <!-- 페이징처리 END -->
+    
+    
+        <!-- 검색 폼 -->
+        <form class="searchArea" id="searchForm" method="get" action="{{ url_for('board._list') }}">
+            <input type="hidden" id="kw" name="kw" value="{{ kw or '' }}">
+            <input type="hidden" id="page" name="page" value="{{ page }}">
+            <input type="hidden" id="tab" name="tab" value="{{ tab }}">
+        </form>
+    
+        <!-- 홈으로 버튼 -->
+        <a href="{{ url_for('board._list') }}" class="btn btn-secondary">게시판 홈으로</a>
+    <!-- board_list -->
+    <!-- board_list -->
+    <!-- board_list -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
