--- a/templates/ladder.html
+++ b/templates/ladder.html
@@ -10,10 +10,8 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <link href="/static/css/ladder.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <script src="/static/js/navbar.js" defer></script>
+    <link href="/static/css/ladder.css" rel="stylesheet">
     <title>나만의 룰렛</title>
     <link rel="stylesheet" href="/static/css/font.css">
     <link rel="shortcut icon" href="/static/images/favicon.ico">
@@ -35,6 +33,7 @@
           </div>
         </div>
         <button onclick="makeRl()">룰렛 만들기</button>
+        <button onclick="remove_all()">리스트 초기화</button>
       </div>
     </div>
     <div id="makeRl" style="display: none">
@@ -48,6 +47,7 @@
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="   crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/static/js/ladder.js"></script>
   </body>
