여러모로 수정

--- a/templates/board_detail.html
+++ b/templates/board_detail.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="오메추!" />
     <meta property="og:description" content="더 이상 뭐 먹을지 고민하지 마세요!" />
     <meta property="og:image" content="/static/images/ogimg.png" />
-    <title>Document</title>
+    <title>{{ board.title + ' - 오메추!'}}</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <script src="/static/js/navbar.js" defer></script>
