--- a/templates/test.html
+++ b/templates/test.html
@@ -63,7 +63,7 @@
         <article class="menu_result" style="display: none">
             <h1 class="text-center">오늘은 이거 먹자</h1>
             <h4 id="result_menu" class="text-center">menu</h4>
-            <button class="all_menu" onclick="$('.menulist').toggle();">모든 메뉴 보기</button>
+            <button id="all_menu_show" class="all_menu" onclick="$('.menulist').toggle();">모든 메뉴 보기</button>
             <div id ="menulist" class="menulist" style="display: none"></div>
             <button class="all_menu mt-3" onclick="location.href='/test'">테스트 다시하기</button>
             <div class="copyclass">
